[transactions] fix: align transaction history page items (#2706)
This commit adds some minor CSS tweaks on TxHistory to improve the view
following the principles described by design specs.

--- a/app/components/shared/TxHistory/TxHistory.module.css
+++ b/app/components/shared/TxHistory/TxHistory.module.css
@@ -84,28 +84,43 @@
   margin-left: 10px;
 }
 
-.amountHash {
-  font-family: var(--font-family-monospace);
-  margin-left: 34px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.amountHash > span {
-  color: var(--overview-balance-label) !important;
-  font-size: 11px !important;
-  line-height: 11px !important;
-}
-
 .info {
-  margin-left: auto;
+  display: grid;
+  grid-template-columns: 0.5fr 3fr 10fr 3fr;
+  width: 100%;
+}
+
+.overviewInfo {
+  display: grid;
+  grid-template-columns: 1fr 8fr 8fr;
+}
+
+.overviewInfo .txDirection {
+  align-self: center;
+  order: 4;
+  grid-column-start: 1;
+  justify-self: left;
+  grid-column-end: 4;
+  font-size: 11px;
+  padding-bottom: 3px;
+  color: var(--overview-balance-label) !important;
+  font-family: var(--font-family-monospace);
+}
+
+.overviewInfo .txDirection .accountName {
+  background: transparent;
+  padding: 0 3px;
+  height: 20px;
 }
 
 .status {
-  padding-top: 1px;
   text-align: right;
-  flex-grow: 2;
+  margin-left: 5px;
+  max-width: 210px;
+}
+
+.txDirection {
+  justify-self: right;
 }
 
 .accountName {
@@ -123,7 +138,7 @@
 
 .timeDateSpacer {
   font-size: 11px;
-  margin-right: 20px;
+  text-align: right;
 }
 
 .overviewPending .txInfo {
@@ -245,6 +260,7 @@
 
 .historyRow .txInfo .txRowWrapper {
   padding: 16px 20px;
+  width: 90%;
 }
 
 .eligibleRow {
@@ -266,6 +282,29 @@
     width: 355px;
   }
   .accountName {
-    display: none;
+    background: transparent;
+    padding: 0 3px;
+    height: 20px;
+  }
+  .status {
+    padding-top: 0px;
+  }
+  .txDirection {
+    align-self: center;
+    order: 4;
+    grid-column-start: 1;
+    justify-self: left;
+    grid-column-end: 4;
+    font-size: 11px;
+    padding-bottom: 3px;
+    color: var(--overview-balance-label) !important;
+    font-family: var(--font-family-monospace);
+  }
+  .txRowWrapper {
+    padding: 5px 20px 27px 20px !important;
+  }
+  .info {
+    grid-template-columns: 0.5fr 3fr 3fr;
+    padding-bottom: 1rem;
   }
 }
